#0001 book reserve and checking library number done.. reserve book doest alter the availability status yet

--- a/app/views/book_dets/show.html.erb
+++ b/app/views/book_dets/show.html.erb
@@ -16,5 +16,5 @@
 </p>
 
 
-<%= link_to 'Reserve', :action => "BookDetsController::reserve_book"%> |
+<%= link_to 'Reserve', reserve_book_det_path(@book_det) %>
 <%= link_to 'Back', book_dets_path %>
