--- a/app/views/member_dets/show.html.erb
+++ b/app/views/member_dets/show.html.erb
@@ -22,4 +22,7 @@
 
 
 <%= link_to 'Edit', edit_member_det_path(@member_det) %> |
-<%= link_to 'Back', member_dets_path %>
+<%= link_to 'Back', member_dets_path %> |
+<%= link_to 'Check library number', check_member_det_path(@member_det) %> 
+<!--check_member_det_path(@member_det) %>
+
